--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.0",
-    "@electron-toolkit/utils": "^3.0.0"
+    "@electron-toolkit/utils": "^3.0.0",
+    "electron-router-dom": "^1.0.5",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@electron-toolkit/tsconfig": "^1.0.1",
