--- a/package.json
+++ b/package.json
@@ -21,8 +21,14 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.0",
     "@electron-toolkit/utils": "^3.0.0",
+    "axios": "^1.6.8",
     "electron-router-dom": "^1.0.5",
-    "react-router-dom": "^6.22.3"
+    "electron-store": "^8.2.0",
+    "react-hook-form": "^7.51.1",
+    "react-router-dom": "^6.22.3",
+    "react-toastify": "^10.0.5",
+    "socket.io-client": "^4.7.5",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@electron-toolkit/tsconfig": "^1.0.1",
