--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "electron-router-dom": "^1.0.5",
     "electron-store": "^8.2.0",
     "react-hook-form": "^7.51.1",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
     "socket.io-client": "^4.7.5",
