--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "electron-store": "^8.2.0",
     "react-hook-form": "^7.51.1",
     "react-icons": "^5.0.1",
+    "react-magic-motion": "^1.1.2",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
     "socket.io-client": "^4.7.5",
